Added redacted changes from private repo

--- a/common/header.html
+++ b/common/header.html
@@ -13,16 +13,16 @@
             </svg></a>
 
         </div>
-        <div id="mobile-menu" class="menu">
+        <div id="mobile-menu" role="navigation" class="menu">
             <ul>
-                <li><a class="active" href="/">Home</a></li>
+                <li class="important"><a href="/">Home</a></li>
                 <li><a class="" href="/produkt/">Produkt</a></li>
                 <li><a class="" href="/downloads/">Downloads</a></li>
                 <li><a class="" href="/integratoren/">Integratoren</a></li>
-                <li><a class="" href="/forum/">Community</a></li>
-                <li><a class="" href="/shop/">Shop</a></li>
-                <li id="login" class="header-icon hide-mobile"><a href="///account.symcon.de/"><i class="fas fa-user" style="font-size: 16px;"></i></a></li>
-                <li id="documentation" class="header-icon hide-mobile"><a href="/service/dokumentation/einfuehrung/"><i class="fas fa-book" style="font-size: 16px;"></i></a></li>
+                <li class="important"><a class="active" href="/forum/">Community</a></li>
+                <li class="important"><a href="/shop/">Shop</a></li>
+                <li id="login" class="important additional_rightside_icon header-icon hide-mobile"><a href="///account.symcon.de/"><svg class="fas d-icon d-icon-user svg-icon svg-node" aria-hidden="true"><use xlink:href="#user"></svg></a></li>
+                <li id="documentation" class="important additional_rightside_icon header-icon hide-mobile"><a href="/service/dokumentation/einfuehrung/"><svg class="fas d-icon d-icon-book svg-icon svg-node" aria-hidden="true"><use xlink:href="#book"></svg></a></li>
             </ul>
         </div>
     </nav>
